# nnframe

./: .gitignore  CLAUDE.md  CMakeLists.txt
docs/: C++ notes.md  resources.md
include/: tensor.h
src/: main.cpp  tensor.cpp
tests/: test_m1_tensor.cpp
